Fix issues with restaurant name not showing up and page expanding past window size

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,9 +82,6 @@
     text-align: left;
     padding: .5em;
   }
-  #map {
-    height: 25em;
-  }
   #restaurant-name {
     margin: 0;
   }
