--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
+  box-sizing: border-box;
   padding: .5em 2.3em .5em;
   list-style: none;
   background-color: #eee;
@@ -193,7 +194,7 @@ nav h1 a {
 }
 .inside > header {
   grid-area: head;
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   z-index: 1000;
@@ -210,7 +211,6 @@ nav h1 a {
   position: fixed;
   width: 50%;
   height: 100%;
-  min-width: 350px;
 }
 .inside #map {
   background-color: #ccc;
@@ -247,6 +247,7 @@ nav h1 a {
   width: 100%;
 }
 #restaurant-container, #reviews-container {
+  box-sizing: border-box;
   border-bottom: 1px solid #d9d9d9;
   padding: 0 1em 1em;
 }
@@ -262,13 +263,14 @@ nav h1 a {
   padding: 0;
 }
 #reviews-list li {
+  box-sizing: border-box;
   background-color: #fff;
   border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   overflow: hidden;
   position: relative;
-  width: 95%;
+  width: 100%;
   padding: 1em;
 }
 #reviews-list li p {
